--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,5 @@
 # See CONTRIBUTORS for the meaning of multiple email addresses.
 
 # Please keep the list sorted.
-
 Google LLC
+Mizux Seiha <mizux.dev@gmail.com>
